--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -91,7 +91,7 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="me.naptie.godot.phigros"
+package/unique_name="me.naptie.GodotPhigros"
 package/name="Godot Phigros"
 package/signed=true
 package/app_category=2
